Fixed overflow issues

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -11,8 +11,8 @@ h1, h2, h3, h4, h5, h6, a {
  
 body {
     font-family: 'Montserrat', sans-serif;
-    overflow-x: hidden;
-    overflow-y: hidden;
+    overflow-x: scroll;
+    overflow-y: scroll;
 }
 
 .img-fluid {
